--- a/esp32-c6-hp-climate/Cargo.toml
+++ b/esp32-c6-hp-climate/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 esp-backtrace = { version = "0.13.0", features = ["esp32c6", "exception-handler", "panic-handler", "println"] }
 esp-hal = { version = "0.19.0", features = ["esp32c6"] }
 esp-println = { version = "0.10.0", features = ["esp32c6", "log"] }
+bme280 = { version = "0.5" }
