--- a/esp32-c6-hp-climate/Cargo.toml
+++ b/esp32-c6-hp-climate/Cargo.toml
@@ -8,3 +8,6 @@ esp-backtrace = { version = "0.13.0", features = ["esp32c6", "exception-handler"
 esp-hal = { version = "0.19.0", features = ["esp32c6"] }
 esp-println = { version = "0.10.0", features = ["esp32c6", "log"] }
 bme280 = { version = "0.5" }
+
+[features]
+lp = []
